# pc-simulator-mp

./: .gitignore  README.md  README_codex.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  play-services-ads-base.properties  play-services-ads-lite.properties  play-services-ads.properties
app/src/main/assets/: UnityServicesProjectConfiguration.json
app/src/main/cpp/: CMakeLists.txt  chook.cpp  chook.h  common.h  hooks.cpp  hooks.h  memory_utils.cpp  memory_utils.h  module.cpp  mp_hooks.cpp  mp_hooks.h  patches.cpp  patches.h
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-am/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-as/: strings.xml
app/src/main/res/values-az/: strings.xml
app/src/main/res/values-b+sr+Latn/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-bs/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rUS/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-eu/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
tools/: il2cpp_offsets_r2.md  mp_server_v0_1.py
(+129 files in other folders)
